[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[project]
name = "hive-nectar"
version = "1.0.0"
description = "Hive Blockchain Python Library"
readme = "README.md"
keywords = ["api", "hive", "library", "rpc"]
license = "MIT"
maintainers = [{ name = "Michael Garcia", email = "thecrazygm@gmail.com" }]
authors = [{ name = "Michael Garcia", email = "thecrazygm@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  "appdirs",
  "asn1crypto",
  "click",
  "coincurve>=20.0.0",
  "cryptography",
  "diff-match-patch",
  "httpx2>=2.2.0",
  "prettytable",
  "ruamel-yaml",
]

[project.urls]
"Bug Tracker" = "https://github.com/srbde/hive-nectar/issues"
Download = "https://github.com/srbde/hive-nectar/tarball/0.1.0b"
Homepage = "http://www.github.com/srbde/hive-nectar"

[project.scripts]
hive-nectar = "nectar.cli:cli"

[dependency-groups]
dev = [
  "build",
  "codacy-coverage",
  "codecov",
  "coverage",
  "doc8",
  "parameterized",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-xdist",
  "readme-renderer",
  "ruff",
  "sphinx",
  "sphinx-click",
  "sphinx-rtd-theme",
  "tomli",
]

[tool.uv]
publish-url = "https://test.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.uv.sources]
coincurve = { git = "https://github.com/ofek/coincurve", rev = "master" }

[tool.ruff]
target-version = "py310"
line-length = 100
format.indent-style = "space"
format.quote-style = "double"
lint.select = ["E", "F", "I", "W"]
lint.ignore = ["E501"]
lint.exclude = [
  "*.egg-info",
  "*.pyc",
  ".cache",
  ".eggs",
  ".git",
  ".tox",
  "__pycache__",
  "build",
  "dist",
  "docs/source/conf.py",
  "tests/fixtures/*",
]
lint.per-file-ignores."**/{tests,docs,tools}/*" = ["E402"]
lint.per-file-ignores."__init__.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = [
  ".git",
  ".*",
  "*.egg*",
  "old",
  "docs",
  "dist",
  "build",
  "examples",
]
addopts = ["-rw", "--doctest-modules", "-n", "auto"]
markers = [
  "network: tests that require network access to live blockchain nodes",
]
