[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[project]
name = "hive-nectar"
version = "1.0.3"
description = "Hive Blockchain Python Library"
readme = "README.md"
keywords = ["api", "hive", "library", "rpc"]
license = "MIT"
maintainers = [{ name = "Michael Garcia", email = "thecrazygm@gmail.com" }]
authors = [{ name = "Michael Garcia", email = "thecrazygm@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  "asn1crypto",
  "click",
  "coincurve>=20.0.0",
  "cryptography",
  "diff-match-patch",
  "httpx2>=2.2.0",
  "prettytable",
  "ruamel-yaml",
]

[tool.uv.build-backend]
module-name = [
  "nectar",
  "nectarapi",
  "nectarbase",
  "nectargraphenebase",
  "nectarstorage",
]

[project.urls]
"Bug Tracker" = "https://github.com/srbde/hive-nectar/issues"
Download = "https://github.com/srbde/hive-nectar"
Homepage = "https://github.com/srbde/hive-nectar"

[project.scripts]
hive-nectar = "nectar.cli:cli"

[dependency-groups]
dev = [
  "bleach>=6.4.0",
  "build",
  "coverage",
  "markdown>=3.10.2",
  "parameterized",
  "pytest",
  "pytest-mock",
  "pytest-recording",
  "ruff",
  "sphinx",
  "sphinx-click",
  "sphinx-rtd-theme",
]

[tool.uv]
publish-url = "https://test.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.uv.sources]
coincurve = { git = "https://github.com/ofek/coincurve", rev = "7829b29c08ebb1cc80386a1cdaf8c2243c4ef5c5" }

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["E402"]
"__init__.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
python_files = ["test_*.py"]
norecursedirs = [
  ".git",
  ".*",
  "*.egg*",
  "old",
  "docs",
  "dist",
  "build",
  "examples",
]
addopts = ["-rw", "--doctest-modules"]
markers = [
  "network: tests that require network access to live blockchain nodes",
]
